working on site

--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
   <!-- Container (The ABOUT Section) -->
   <div id="about" class="container">
     <div class="text-center">
-      <h3>THE BAND</h3>
+      <h2>THE BAND</h2>
       <p><em>"Soul n Roll"</em></p>
     </div>
 
@@ -77,9 +77,9 @@
           others; If you don’t have it, you can get it with us. </p>
       </div>
     </div>
+  </div>
 
-
-    <!-- <br>
+  <!-- <br>
     <div class="row">
       <div class="col-sm-4">
         <p class="text-center"><strong>Maddie</strong></p><br>
@@ -115,23 +115,43 @@
       </div>
     </div> -->
 
-    <div id="contact" class="bg-1">
-      <div>
-        <h3 class="text-center">CONTACT</h3>
-        <!-- <p class="text-center"><em>We love our fans!</em></p> -->
+  <div id="contact" class="container">
+    <div>
+      <h3 class="text-center">CONTACT</h3>
+      <!-- <p class="text-center"><em>We love our fans!</em></p> -->
 
-        <div class="row">
-          <div class="col-md-12 text-center">
-            <!-- <p>Fan? Drop a note.</p> -->
-            <p><span class="glyphicon glyphicon-map-marker"></span>Nashville TN</p>
-            <p><span class="glyphicon glyphicon-phone"></span>Phone: +1 (702) 845-9282</p>
-            <p><span class="glyphicon glyphicon-envelope"></span>Email: MaddieInGoodCompany@gmail.com</p>
-          </div>
+      <div class="row">
+        <div class="col-md-12 text-center">
+          <!-- <p>Fan? Drop a note.</p> -->
+          <p><span class="glyphicon glyphicon-map-marker"></span>Nashville TN</p>
+        </div>
+
+        <div class="col-md-12 text-center">
+          <p><span class="glyphicon glyphicon-phone a-tag-no-hover"></span>
+            Phone:
+            <a class="link-text" href="tel:702-845-9282">
+              +1 (702) 845-9282
+          </p>
+          </a>
+        </div>
+
+        <div class="col-md-12 text-center">
+          <p><span class="glyphicon glyphicon-envelope a-tag-no-hover"></span>
+            Email:
+            <a class="link-text" href="mailto:maddieingoodcompany@gmail.com">
+              MaddieInGoodCompany@gmail.com
+          </p>
+          </a>
         </div>
       </div>
+
     </div>
+    <footer class="text-center">
+      <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
+        <span class="glyphicon glyphicon-chevron-up"></span>
+      </a><br><br>
+    </footer>
   </div>
-  </div>
 
 
 
@@ -162,13 +182,8 @@
 
 
 
-  <!-- Footer -->
 
-  <footer class="text-center">
-    <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
-      <span class="glyphicon glyphicon-chevron-up"></span>
-    </a><br><br>
-  </footer>
+
 
 
 
