--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
   <div id="about" class="container">
     <div class="row">
       <div class="text-center">
-        <h3>CONTACT</h3>
+        <h2>CONTACT US</h2>
       </div>
 
       <div>
@@ -85,7 +85,7 @@
           <br>
 
           <div class="form-group col-sm-8 col-sm-offset-2">
-            <label class="required">Your message</label>
+            <label class="required">Message</label>
             <div>
               <textarea class="form-control form-control-lg message-contact" type="text" name="message"
                 placeholder="Enter your message" required="required"></textarea>
@@ -93,17 +93,55 @@
 
             <br>
             <input type="hidden" name="utf8" value="✓">
-            <button class="btn btn-primary" type="submit">SUBMIT</button>
+            <button class="btn btn-primary padding-button" type="submit">SUBMIT</button>
           </div>
         </form>
       </div>
     </div>
+  </div>
+
+
+  <div id="contact" class="container">
+    <div>
+      <h3 class="text-center">CONTACT</h3>
+      <!-- <p class="text-center"><em>We love our fans!</em></p> -->
+
+      <div class="row">
+        <div class="col-md-12 text-center">
+          <!-- <p>Fan? Drop a note.</p> -->
+          <p><span class="glyphicon glyphicon-map-marker"></span>Nashville TN</p>
+        </div>
+
+        <div class="col-md-12 text-center">
+          <p><span class="glyphicon glyphicon-phone a-tag-no-hover"></span>
+            Phone:
+            <a class="link-text" href="tel:702-845-9282">
+              +1 (702) 845-9282
+          </p>
+          </a>
+        </div>
+
+        <div class="col-md-12 text-center">
+          <p><span class="glyphicon glyphicon-envelope a-tag-no-hover"></span>
+            Email:
+            <a class="link-text" href="mailto:maddieingoodcompany@gmail.com">
+              MaddieInGoodCompany@gmail.com
+          </p>
+          </a>
+        </div>
+      </div>
+
+    </div>
+    <footer class="text-center">
+      <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
+        <span class="glyphicon glyphicon-chevron-up"></span>
+      </a><br><br>
+    </footer>
+  </div>
 
 
 
-
-
-    <!-- <br>
+  <!-- <br>
     <div class="row">
       <div class="col-sm-4">
         <p class="text-center"><strong>Maddie</strong></p><br>
@@ -139,58 +177,7 @@
       </div>
     </div> -->
 
-    <div id="contact" class="bg-1">
-      <div>
-        <div class="row">
-          <div class="col-md-12 text-center">
-            <!-- <p>Fan? Drop a note.</p> -->
-            <p><span class="glyphicon glyphicon-map-marker"></span>Nashville TN</p>
-            <p><span class="glyphicon glyphicon-phone"></span>Phone: +1 (702) 845-9282</p>
-            <p><span class="glyphicon glyphicon-envelope"></span>Email: MaddieInGoodCompany@gmail.com</p>
-          </div>
-        </div>
-      </div>
-    </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <!-- Footer -->
-
-    <footer class="text-center">
-      <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
-        <span class="glyphicon glyphicon-chevron-up"></span>
-      </a><br><br>
-    </footer>
-  </div>
 
 
 
