--- a/merch.html
+++ b/merch.html
@@ -56,12 +56,13 @@
   <!-- Container (The Store Section) -->
   <div id="store" class="container">
     <div class="text-center">
-      <h3>STORE</h3>
+      <h2>STORE</h2>
     </div>
     <!-- <p>Maddie In Good Company Merchandise</p> -->
-    <h2>Coming soon...</h2>
+    <h3>Coming soon...</h3>
     <br>
-    <!-- <div class="row">
+  </div>
+  <!-- <div class="row">
     <div class="col-sm-4 col-sm-offset-2 col-12 text-center">
       <img src="assets/images/maddieingoodcoshirt.jpg" class="tshirt" width="255" height="305">
       <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
@@ -82,7 +83,7 @@
         <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
       </form>
     </div> -->
-    <!-- <div class="col-sm-4 col-sm-offset-4 col-12 text-center">
+  <!-- <div class="col-sm-4 col-sm-offset-4 col-12 text-center">
       <img src="assets/images/blacktshirt.PNG" class="tshirt" width="255" height="305">
       <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
         <input type="hidden" name="cmd" value="_s-xclick">
@@ -104,63 +105,46 @@
         
     </div> -->
 
-    <!-- </div> -->
-    <div id="contact" class="bg-1">
-      <div>
-        <h3 class="text-center">CONTACT</h3>
-        <!-- <p class="text-center"><em>We love our fans!</em></p> -->
 
-        <div class="row">
-          <div class="col-md-12 text-center">
-            <!-- <p>Fan? Drop a note.</p> -->
-            <p><span class="glyphicon glyphicon-map-marker"></span>Nashville TN</p>
-            <p><span class="glyphicon glyphicon-phone"></span>Phone: +1 (702) 845-9282</p>
-            <p><span class="glyphicon glyphicon-envelope"></span>Email: MaddieInGoodCompany@gmail.com</p>
-          </div>
+
+  <div id="contact" class="container">
+    <div>
+      <h3 class="text-center">CONTACT</h3>
+      <!-- <p class="text-center"><em>We love our fans!</em></p> -->
+
+      <div class="row">
+        <div class="col-md-12 text-center">
+          <!-- <p>Fan? Drop a note.</p> -->
+          <p><span class="glyphicon glyphicon-map-marker"></span>Nashville TN</p>
         </div>
 
+        <div class="col-md-12 text-center">
+          <p><span class="glyphicon glyphicon-phone a-tag-no-hover"></span>
+            Phone:
+            <a class="link-text" href="tel:702-845-9282">
+              +1 (702) 845-9282
+          </p>
+          </a>
+        </div>
+
+        <div class="col-md-12 text-center">
+          <p><span class="glyphicon glyphicon-envelope a-tag-no-hover"></span>
+            Email:
+            <a class="link-text" href="mailto:maddieingoodcompany@gmail.com">
+              MaddieInGoodCompany@gmail.com
+          </p>
+          </a>
+        </div>
       </div>
+
     </div>
+    <footer class="text-center">
+      <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
+        <span class="glyphicon glyphicon-chevron-up"></span>
+      </a><br><br>
+    </footer>
   </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  <!-- Footer -->
-
-  <footer class="text-center">
-    <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
-      <span class="glyphicon glyphicon-chevron-up"></span>
-    </a><br><br>
-  </footer>
-  </div>
 
 
 
