--- a/photos.html
+++ b/photos.html
@@ -191,7 +191,7 @@
   <!-- Container (The ABOUT Section) -->
   <div id="about" class="container">
     <div class="text-center">
-      <h3>PHOTOS</h3>
+      <h2>PHOTOS</h2>
     </div>
 
 
@@ -222,62 +222,46 @@
       </section>
     </main>
 
-    <div id="contact" class="bg-1">
-      <div class="container">
-        <h3 class="text-center">CONTACT</h3>
-        <!-- <p class="text-center"><em>We love our fans!</em></p> -->
 
-        <div class="row">
-          <div class="col-md-12 text-center">
-            <!-- <p>Fan? Drop a note.</p> -->
-            <p><span class="glyphicon glyphicon-map-marker"></span>Nashville TN</p>
-            <p><span class="glyphicon glyphicon-phone"></span>Phone: +1 (702) 845-9282</p>
-            <p><span class="glyphicon glyphicon-envelope"></span>Email: MaddieInGoodCompany@gmail.com</p>
-          </div>
+  </div>
+
+  <div id="contact" class="container">
+    <div>
+      <h3 class="text-center">CONTACT</h3>
+      <!-- <p class="text-center"><em>We love our fans!</em></p> -->
+
+      <div class="row">
+        <div class="col-md-12 text-center">
+          <!-- <p>Fan? Drop a note.</p> -->
+          <p><span class="glyphicon glyphicon-map-marker"></span>Nashville TN</p>
+        </div>
+
+        <div class="col-md-12 text-center">
+          <p><span class="glyphicon glyphicon-phone a-tag-no-hover"></span>
+            Phone:
+            <a class="link-text" href="tel:702-845-9282">
+              +1 (702) 845-9282
+          </p>
+          </a>
+        </div>
+
+        <div class="col-md-12 text-center">
+          <p><span class="glyphicon glyphicon-envelope a-tag-no-hover"></span>
+            Email:
+            <a class="link-text" href="mailto:maddieingoodcompany@gmail.com">
+              MaddieInGoodCompany@gmail.com
+          </p>
+          </a>
         </div>
       </div>
+
     </div>
+    <footer class="text-center">
+      <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
+        <span class="glyphicon glyphicon-chevron-up"></span>
+      </a><br><br>
+    </footer>
   </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  <!-- Footer -->
-
-  <footer class="text-center">
-    <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
-      <span class="glyphicon glyphicon-chevron-up"></span>
-    </a><br><br>
-  </footer>
-  </div>
-
 
 
 
