--- a/shows.html
+++ b/shows.html
@@ -54,28 +54,29 @@
 
 
   <!-- Container (The ABOUT Section) -->
-  <div id="tour" class="bg-1">
+  <div id="tour" class="bg-1 shows-container">
     <div class="container">
-      <h3 class="text-center">UPCOMING SHOWS</h3>
+      <h2 class="text-center">UPCOMING SHOWS</h2>
       <ul class="list-group">
         <li class="list-group-item black-text">
           <div>May 21 @ Dee's Lounge</div>
           <a target="_blank" href="https://deeslounge.com/shows-events/"><button
-              class="btn btn-primary">Tickets</button></a>
+              class="btn btn-primary padding-button">Tickets</button></a>
         </li>
         <li class="list-group-item black-text">
           <div>May 28 @City Winery </div><a target="_blank" href="https://deeslounge.com/shows-events/"><button
-              class="btn btn-primary">Tickets</button></a>
+              class="btn btn-primary padding-button">Tickets</button></a>
         </li>
 
       </ul>
+    </div>
+  </div>
 
 
 
 
 
-
-      <!-- <h3 class="text-center">PAST SHOWS</h3>
+  <!-- <h3 class="text-center">PAST SHOWS</h3>
       <div class="row text-center">
         <div class="col-sm-4"></div>
         <div class="col-sm-4">
@@ -84,18 +85,17 @@
             <p><strong>@ The 5 Spot</strong></p>
             <p>January 5 2020</p>
             <p>w/ Camden West & Carter Veil</p> -->
-      <!-- <p>9:00pm</p>
+  <!-- <p>9:00pm</p>
           <p>$10</p> -->
-      <!-- <button class="btn" data-toggle="modal" data-target="#myModal">View Setlist</button> -->
-      <!-- <button class="btn" data-toggle="modal" data-target="#myModal">Buy Tickets</button> -->
-      <!-- </div>
+  <!-- <button class="btn" data-toggle="modal" data-target="#myModal">View Setlist</button> -->
+  <!-- <button class="btn" data-toggle="modal" data-target="#myModal">Buy Tickets</button> -->
+  <!-- </div>
         </div>
       </div> -->
-    </div>
-  </div>
 
-  <div id="contact" class="bg-1">
-    <div class="container">
+
+  <div id="contact" class="container">
+    <div>
       <h3 class="text-center">CONTACT</h3>
       <!-- <p class="text-center"><em>We love our fans!</em></p> -->
 
@@ -103,14 +103,34 @@
         <div class="col-md-12 text-center">
           <!-- <p>Fan? Drop a note.</p> -->
           <p><span class="glyphicon glyphicon-map-marker"></span>Nashville TN</p>
-          <p><span class="glyphicon glyphicon-phone"></span>Phone: +1 (702) 845-9282</p>
-          <p><span class="glyphicon glyphicon-envelope"></span>Email: MaddieInGoodCompany@gmail.com</p>
+        </div>
+
+        <div class="col-md-12 text-center">
+          <p><span class="glyphicon glyphicon-phone a-tag-no-hover"></span>
+            Phone:
+            <a class="link-text" href="tel:702-845-9282">
+              +1 (702) 845-9282
+          </p>
+          </a>
+        </div>
+
+        <div class="col-md-12 text-center">
+          <p><span class="glyphicon glyphicon-envelope a-tag-no-hover"></span>
+            Email:
+            <a class="link-text" href="mailto:maddieingoodcompany@gmail.com">
+              MaddieInGoodCompany@gmail.com
+          </p>
+          </a>
         </div>
       </div>
-    </div>
-  </div>
-  </div>
 
+    </div>
+    <footer class="text-center">
+      <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
+        <span class="glyphicon glyphicon-chevron-up"></span>
+      </a><br><br>
+    </footer>
+  </div>
 
 
 
