--- a/contact.html
+++ b/contact.html
@@ -107,27 +107,36 @@
       <!-- <p class="text-center"><em>We love our fans!</em></p> -->
 
       <div class="row">
-        <div class="col-md-12 text-center">
+        <div class="col-md-4 col-md-offset-2">
           <!-- <p>Fan? Drop a note.</p> -->
-          <p><span class="glyphicon glyphicon-map-marker"></span>Nashville TN</p>
-        </div>
+          <h5><span class="glyphicon glyphicon-map-marker"></span>Nashville TN</h5>
 
-        <div class="col-md-12 text-center">
-          <p><span class="glyphicon glyphicon-phone a-tag-no-hover"></span>
+          <h5><span class="glyphicon glyphicon-phone a-tag-no-hover"></span>
             Phone:
             <a class="link-text" href="tel:702-845-9282">
               +1 (702) 845-9282
-          </p>
+          </h5>
           </a>
-        </div>
-
-        <div class="col-md-12 text-center">
-          <p><span class="glyphicon glyphicon-envelope a-tag-no-hover"></span>
+          <h5><span class="glyphicon glyphicon-envelope a-tag-no-hover"></span>
             Email:
             <a class="link-text" href="mailto:maddieingoodcompany@gmail.com">
               MaddieInGoodCompany@gmail.com
-          </p>
+          </h5>
           </a>
+        </div>
+        <div class="col-md-4 col-md-offset-2 text-center social-container">
+          <h4><em>Follow us on social media</em></h4>
+          <div class="social-container-footer">
+            <a target="_blank" href="https://www.facebook.com/MaddieInGoodCompany/"><i style="color:#4267B2;"
+                class="fab fa-facebook"></i></a>
+            <a target="_blank" href="https://instagram.com/maddgoodco?igshid=NDA1YzNhOGU="> <i style="color: #8a3ab9;"
+                class="fab fa-instagram"></i></a>
+            <a target="_blank"
+              href="https://www.tiktok.com/@maddgoodco?_d=secCgYIASAHKAESPgo8u3dLujTQAWf5nXnPWatUwYuGbVYnYvEpt8e25%2F5MfcjvLcgFmn63U%2Fvt7tmxFTrJ83O9BS94jKBrq6rkGgA%3D&_r=1&checksum=5ba1eedec11abb483f333e0eea5f2741c6b12ceea9a083d12f2bf3d9a510d55a&language=en&sec_uid=MS4wLjABAAAAYrxWn7QGaIaX91b3u8y_nELOu9MgMf0J9NiRHoWgopCup63aLw3-0xntnUwnoE4D&sec_user_id=MS4wLjABAAAAGEVsD7uXmSF7gwH2D7MQ0RKva80tIwKJOuVSkHBAi8gOmcXi8lBuU8-duQou3RT2&share_app_id=1233&share_author_id=6921017642418488326&share_link_id=62A9B8E1-C404-447E-AE7F-F33339F41DB0&source=h5_m&tt_from=copy&u_code=dghfgm0j7ckbah&user_id=6919956403784745989&utm_campaign=client_share&utm_medium=ios&utm_source=copy"><i
+                class="fab fa-tiktok"></i></a>
+            <a target="_blank" href="https://twitter.com/MadGoodCo"><i style="color:#1DA1F2;"
+                class="fab fa-twitter"></i></a>
+          </div>
         </div>
       </div>
 
