working on site

--- a/index.html
+++ b/index.html
@@ -164,29 +164,28 @@
 
 
   <!-- Container (TOUR Section) -->
-  <div id="tour" class="bg-1 ">
-    <div class="container">
-      <h2 class="text-center">UPCOMING SHOWS</h2>
-      <ul class="list-group">
-        <li class="list-group-item black-text">
-          <div>May 21 @ Dee's Lounge</div>
-          <a target="_blank" href="https://deeslounge.com/shows-events/"><button
-              class="btn btn-primary padding-button">Tickets</button></a>
-        </li>
-        <li class="list-group-item black-text">
-          <div>May 28 @City Winery </div><a target="_blank"
-            href="https://citywinery.com/nashville/Online/default.asp?BOparam::WScontent::loadArticle::permalink=NSH-Toast-and-Jam-5-28-22-12pm&BOparam::WScontent::loadArticle::context_id="><button
-              class="btn btn-primary padding-button">Tickets</button></a>
-        </li>
+  <div id="tour" class="container">
 
-      </ul>
-
-
+    <h2 class="text-center margin-small">UPCOMING SHOWS</h2>
+    <ul class="list-group">
+      <li class="list-group-item black-text">
+        <div>May 21 @ Dee's Lounge</div>
+        <a target="_blank" href="https://deeslounge.com/shows-events/"><button
+            class="btn btn-primary padding-button">Tickets</button></a>
+      </li>
+      <li class="list-group-item black-text">
+        <div>May 28 @City Winery </div><a target="_blank"
+          href="https://citywinery.com/nashville/Online/default.asp?BOparam::WScontent::loadArticle::permalink=NSH-Toast-and-Jam-5-28-22-12pm&BOparam::WScontent::loadArticle::context_id="><button
+            class="btn btn-primary padding-button">Tickets</button></a>
+      </li>
+    </ul>
+  </div>
 
 
 
 
-      <!-- <h3 class="text-center">PAST SHOWS</h3>
+
+  <!-- <h3 class="text-center">PAST SHOWS</h3>
       <div class="row text-center">
         <div class="col-sm-4"></div>
         <div class="col-sm-4">
@@ -195,15 +194,15 @@
             <p><strong>@ The 5 Spot</strong></p>
             <p>January 5 2020</p>
             <p>w/ Camden West & Carter Veil</p> -->
-      <!-- <p>9:00pm</p>
+  <!-- <p>9:00pm</p>
           <p>$10</p> -->
-      <!-- <button class="btn" data-toggle="modal" data-target="#myModal">View Setlist</button> -->
-      <!-- <button class="btn" data-toggle="modal" data-target="#myModal">Buy Tickets</button> -->
-      <!-- </div>
+  <!-- <button class="btn" data-toggle="modal" data-target="#myModal">View Setlist</button> -->
+  <!-- <button class="btn" data-toggle="modal" data-target="#myModal">Buy Tickets</button> -->
+  <!-- </div>
         </div>
       </div> -->
-    </div>
-  </div>
+
+
 
 
   <!-- Modal -->
