--- a/contact.html
+++ b/contact.html
@@ -72,13 +72,12 @@
           <div class="form-row">
             <div class="form-group col-sm-4 col-sm-offset-2">
               <label class="required">Full name</label>
-              <input class="form-control form-control-lg" type="text" name="first_name" placeholder="Enter your name"
-                required="required">
+              <input class="form-control form-control-lg" type="text" name="first_name" placeholder="Enter your name">
             </div>
             <div class="form-group col-sm-4">
               <label class="required">Email address</label>
               <input class="form-control form-control-lg" type="email" name="email"
-                placeholder="Enter your email address" required="required">
+                placeholder="Enter your email address">
             </div>
             <br>
           </div>
@@ -88,7 +87,7 @@
             <label class="required">Message</label>
             <div>
               <textarea class="form-control form-control-lg message-contact" type="text" name="message"
-                placeholder="Enter your message" required="required"></textarea>
+                placeholder="Enter your message"></textarea>
             </div>
 
             <br>
