--- a/about.html
+++ b/about.html
@@ -63,20 +63,18 @@
       <p><em>"Soul n Roll"</em></p>
     </div>
 
-    <div class="row">
+    <div class="row" style="display:flex; justify-content: center; align-items:center;">
       <div class="col-sm-6" style="padding-top:20px;">
         <img width="100%" height="100%" src="./assets/updated-images/BlakePhotoshoot.JPEG">
       </div>
       <div class="col-sm-6" style="padding-top:20px;">
-        <p>Maddie in Good Company was established in January 2018 at a Janis Joplin tribute show in nashville, tn at
-          Exit In. The 3 piece clicked immediately, headed back to the house, ate pizza and jammed. High on life, the
-          band was formed. The following weekend the band met and started writing songs. Over the last 4 years they have
-          released 4 songs and are in the process of recording an album. The band has since expanded to be 8 members
-          consisting of vocals, bgv, guitar, bass, drums, 2 saxophone players, and a keyboardist. The melting pot of
-          musical background has created a new genre called “soul n roll”. </p>
-        <p>The band’s mission is to encourage everyone to surround themselves in good company. They were lucky enough to
-          find each other on a serendipitous night and have since become family. They want to share that feeling with
-          others; If you don’t have it, you can get it with us. </p>
+        <p>The members of Maddie in Good Company met in the winter of 2018 at a Janis Joplin tribute show in Nashville,
+          TN. With magic in the air and music in their hearts the Soul n' Roll band was formed. Over the last 4 years
+          they have played historic venues, released 4 songs and are in the process of writing and recording an album.
+        </p>
+        <p>The members of the band believe they were lucky enough to find each other on a serendipitous night and have
+          since become family. Their objective is to share that feeling with others, so remember…You’re in Good Company.
+        </p>
       </div>
     </div>
   </div>
