--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
   <div id="tour" class="container">
 
     <h2 class="text-center margin-small">UPCOMING SHOWS</h2>
+    <!-- <button class="past-shows-button">Past shows</button> -->
     <ul class="list-group">
       <div class="show-0">
         <li class="list-group-item black-text">
@@ -494,6 +495,8 @@
 
   <script>
     $(document).ready(function () {
+
+
       //handle date
 
       const dateVal = $('.date').text().split(' ').filter((i) => i !== null && i !== '')
