--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
       <p><em>"Soul n Roll"</em></p>
     </div>
 
-    <div class="row" style="display:flex; justify-content: center; align-items:center;">
+    <div class="row">
       <div class="col-sm-6" style="padding-top:20px;">
         <img width="100%" height="100%" src="./assets/updated-images/BlakePhotoshoot.JPEG">
       </div>
