added photos to photo section

--- a/photos.html
+++ b/photos.html
@@ -21,7 +21,6 @@
 <style>
   main section {
     width: 100%;
-    min-height: 100vh;
     padding: 4rem 0;
   }
 
@@ -62,7 +61,7 @@
   main section .carousel-container .item .image img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
   }
 
   main section .carousel-container .item .text {
@@ -201,21 +200,102 @@
           <div class="lx-row">
             <div class="lx-card carousel-container">
               <div class="item">
-                <div class="image"><img src="./assets/updated-images/troubledmind.jpg" /></div>
+                <div class="image"><img src="./assets/fivespot-images/DSC_5261.jpg" /></div>
               </div>
               <div class="item">
-                <div class="image"><img src="./assets/updated-images/IdBeGone.JPEG" /></div>
-                <div class="text is-text-left">
-                  <h1 class="title"> </h1>
-                </div>
+                <div class="image"><img src="./assets/fivespot-images/DSC_5267.jpg" /></div>
+
               </div>
               <div class="item">
-                <div class="image"><img src="./assets/updated-images/underdog.jpg" /></div>
-                <div class="text is-text-centered">
-                  <p> </p>
-                </div>
-              </div><a class="prev has-dflex-center"><i class="fas fa-angle-left"></i></a><a
-                class="next has-dflex-center"><i class="fas fa-angle-right"></i></a>
+                <div class="image"><img src="./assets/fivespot-images/DSC_5283.jpg" /></div>
+
+              </div>
+              <div class="item">
+                <div class="image"><img src="./assets/fivespot-images/DSC_5296.jpg" /></div>
+
+              </div>
+              <div class="item">
+                <div class="image"><img src="./assets/fivespot-images/DSC_5304.jpg" /></div>
+
+              </div>
+              <div class="item">
+                <div class="image"><img src="./assets/fivespot-images/DSC_5344.jpg" /></div>
+
+              </div>
+              <div class="item">
+                <div class="image"><img src="./assets/fivespot-images/DSC_5369.jpg" /></div>
+
+              </div>
+              <div class="item">
+                <div class="image"><img src="./assets/fivespot-images/DSC_5377.jpg" /></div>
+
+              </div>
+              <div class="item">
+                <div class="image"><img src="./assets/fivespot-images/DSC_5382.jpg" /></div>
+
+              </div>
+              <div class="item">
+                <div class="image"><img src="./assets/fivespot-images/DSC_5390.jpg" /></div>
+
+              </div>
+              <div class="item">
+                <div class="image"><img src="./assets/fivespot-images/DSC_5391.jpg" /></div>
+
+              </div>
+              <div class="item">
+                <div class="image"><img src="./assets/fivespot-images/DSC_5398.jpg" /></div>
+
+              </div>
+              <div class="item">
+                <div class="image"><img src="./assets/fivespot-images/DSC_5416.jpg" /></div>
+
+              </div>
+              <div class="item">
+                <div class="image"><img src="./assets/fivespot-images/DSC_5503.jpg" /></div>
+
+              </div>
+              <div class="item">
+                <div class="image"><img src="./assets/fivespot-images/DSC_5604.jpg" /></div>
+
+              </div>
+              <div class="item">
+                <div class="image"><img src="./assets/fivespot-images/DSC_5612.jpg" /></div>
+
+              </div>
+              <div class="item">
+                <div class="image"><img src="./assets/fivespot-images/DSC_5623.jpg" /></div>
+
+              </div>
+              <div class="item">
+                <div class="image"><img src="./assets/fivespot-images/DSC_5664.jpg" /></div>
+
+              </div>
+              <div class="item">
+                <div class="image"><img src="./assets/fivespot-images/DSC_5703.jpg" /></div>
+
+              </div>
+              <div class="item">
+                <div class="image"><img src="./assets/fivespot-images/DSC_5710.jpg" /></div>
+
+              </div>
+              <div class="item">
+                <div class="image"><img src="./assets/fivespot-images/DSC_5711.jpg" /></div>
+
+              </div>
+              <div class="item">
+                <div class="image"><img src="./assets/fivespot-images/DSC_5744.jpg" /></div>
+
+              </div>
+              <div class="item">
+                <div class="image"><img src="./assets/fivespot-images/DSC_5747.jpg" /></div>
+
+              </div>
+              <div class="item">
+                <div class="image"><img src="./assets/fivespot-images/DSC_5749.jpg" /></div>
+
+              </div>
+              <a class="prev has-dflex-center"><i class="fas fa-angle-left"></i></a><a class="next has-dflex-center"><i
+                  class="fas fa-angle-right"></i></a>
             </div>
           </div>
         </div>
