--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
     <h2 class="text-center margin-small">UPCOMING SHOWS</h2>
     <!-- <button class="past-shows-button">Past shows</button> -->
     <ul class="list-group">
-      <div class="show-0">
+      <!-- <div class="show-0">
         <li class="list-group-item black-text">
           <div class="show-info">
             <div class="date">May21 </div>
@@ -178,8 +178,8 @@
           <a target="_blank" href="https://deeslounge.com/shows-events/"><button
               class="btn btn-primary padding-button">Tickets</button></a>
         </li>
-      </div>
-      <div class="show-1">
+      </div> -->
+      <!-- <div class="show-1">
         <li class="list-group-item black-text">
           <div class="show-info">
             <div class="date">May28 </div>
@@ -188,11 +188,35 @@
             href="https://citywinery.com/nashville/Online/default.asp?BOparam::WScontent::loadArticle::permalink=NSH-Toast-and-Jam-5-28-22-12pm&BOparam::WScontent::loadArticle::context_id="><button
               class="btn btn-primary padding-button">Tickets</button></a>
         </li>
+      </div> -->
+      <div class="show-0">
+        <li class="list-group-item black-text">
+          <div class="show-info">
+            <div class="date-0 date">Jan21 </div>
+            <div> @ The Underdog</div>
+          </div><a target="_blank" href="#"><button class="btn btn-primary padding-button" disabled>Tickets</button></a>
+        </li>
+      </div>
+      <div class="show-1">
+        <li class="list-group-item black-text">
+          <div class="show-info">
+            <div class="date-1 date">Feb18 </div>
+            <div> @ The Underdog</div>
+          </div><a target="_blank" href="#"><button class="btn btn-primary padding-button" disabled>Tickets</button></a>
+        </li>
       </div>
       <div class="show-2">
         <li class="list-group-item black-text">
           <div class="show-info">
-            <div class="date">Aug27 </div>
+            <div class="date-2 date">Mar18 </div>
+            <div> @ The Underdog</div>
+          </div><a target="_blank" href="#"><button class="btn btn-primary padding-button" disabled>Tickets</button></a>
+        </li>
+      </div>
+      <div class="show-3">
+        <li class="list-group-item black-text">
+          <div class="show-info">
+            <div class="date-3 date">Apr15 </div>
             <div> @ The Underdog</div>
           </div><a target="_blank" href="#"><button class="btn btn-primary padding-button" disabled>Tickets</button></a>
         </li>
@@ -490,41 +514,35 @@
 
   <script>
     $(document).ready(function () {
-
-
       //handle date
 
       const dateVal = $('.date').text().split(' ').filter((i) => i !== null && i !== '')
 
-
-      const formattedDates = dateVal.map((i) => new Date(`${i}, 2022`))
+      console.log('ate', dateVal)
+      const formattedDates = dateVal.map((i) => new Date(`${i}, 2023`))
 
       const todaysDate = new Date()
+
+      console.log('for', formattedDates)
 
 
       const futureDates = formattedDates.map((i) => i.getTime() > todaysDate.getTime() ? i : null)
 
-
+      console.log('fu', futureDates)
       futureDates.forEach((i, idx) => {
-        const vall = dateVal?.[idx]
-        // console.log(`vall ${vall}`)
-        const val = $('.show').text()
+        const val = dateVal?.[idx]
 
-        // console.log(`future dates ${i}`)
-        // const options = { month: 'long' }
-        // const month = i?.getUTCMonth()
-        // console.log(month)
-        // const formattedMonth = new Intl.DateTimeFormat('en-US', options).format(month)
-        // const monthAndDay = `${formattedMonth} ${i?.getDay()}`
-        // console.log(monthAndDay)
-        // console.log($('.show').text())
-        if ($(`.show-${idx}`).text().includes(vall) && i) {
-          // console.log(idx)
-          $('.date').html(new Date(i).toLocaleDateString('en-us', { year: "numeric", month: "short", day: "numeric" }))
+
+        console.log('texthere', $(`.show-${idx}`).text())
+        if ($(`.show-${idx}`).text().includes(val) && i) {
+
+          console.log(new Date(i).toLocaleDateString('en-us', { year: "numeric", month: "short", day: "numeric" }))
+          $(`.date-${idx}`).html(new Date(i).toLocaleDateString('en-us', { year: "numeric", month: "short", day: "numeric" }))
           $(`.show-${idx}`).addClass('show-active');
 
         }
         else {
+
 
           $(`.show-${idx}`).addClass('show-unactive');
 
