link store to shopify

--- a/photos.html
+++ b/photos.html
@@ -173,7 +173,7 @@
           <li><a target="_blank" href="https://www.youtube.com/channel/UC4iFrS6hKpvFr3QVqszlwRQ">VIDEOS</a></li>
           <li><a href="./shows.html">SHOWS</a></li>
           <li><a href="./photos.html">PHOTOS</a></li>
-          <li><a href="./merch.html">MERCH</a></li>
+          <li><a target="_blank" href="https://maddgoodco.myshopify.com/">MERCH</a></li>
           <li><a href="./contact.html">CONTACT</a></li>
         </ul>
       </div>
