remove contact us page

--- a/merch.html
+++ b/merch.html
@@ -43,7 +43,7 @@
           <li><a href="./shows.html">SHOWS</a></li>
           <li><a href="./photos.html">PHOTOS</a></li>
           <li><a href="./merch.html">MERCH</a></li>
-          <li><a href="./contact.html">CONTACT</a></li>
+          <!-- <li><a href="./contact.html">CONTACT</a></li> -->
         </ul>
       </div>
     </div>
