--- a/photos.html
+++ b/photos.html
@@ -174,7 +174,7 @@
           <li><a href="./shows.html">SHOWS</a></li>
           <li><a href="./photos.html">PHOTOS</a></li>
           <li><a target="_blank" href="https://maddgoodco.myshopify.com/">MERCH</a></li>
-          <li><a href="./contact.html">CONTACT</a></li>
+          <!-- <li><a href="./contact.html">CONTACT</a></li> -->
         </ul>
       </div>
     </div>
