--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <li><a href="./shows.html">SHOWS</a></li>
           <li><a href="./photos.html">PHOTOS</a></li>
           <li><a target="_blank" href="https://maddgoodco.myshopify.com/">MERCH</a></li>
-          <li><a href="./contact.html">CONTACT</a></li>
+          <!-- <li><a href="./contact.html">CONTACT</a></li> -->
 
 
           <!-- <li><a href="#"><span class="glyphicon glyphicon-search"></span></a></li>  -->
