added sevier park fest show

--- a/shows.html
+++ b/shows.html
@@ -117,6 +117,16 @@
                 disabled>Tickets</button></a>
           </li>
         </div>
+        <div class="show-4">
+          <li class="list-group-item black-text">
+            <div class="show-info">
+              <div class="date-4 date">May6 </div>
+              <div> @ Sevier Park Fest</div>
+            </div><a target="_blank"
+              href="https://www.eventbrite.com/e/sevier-park-fest-2023-tickets-539388394207?aff=MaddieinGoodCompany"><button
+                class="btn btn-primary padding-button">Tickets</button></a>
+          </li>
+        </div>
       </ul>
     </div>
   </div>
