--- a/shows.html
+++ b/shows.html
@@ -127,6 +127,24 @@
                 class="btn btn-primary padding-button">Tickets</button></a>
           </li>
         </div>
+        <div class="show-5">
+          <li class="list-group-item black-text">
+            <div class="show-info">
+              <div class="date-5 date">Sep30 </div>
+              <div> @ The Underdog</div>
+            </div><a target="_blank" href="#"><button class="btn btn-primary padding-button "
+                disabled>Tickets</button></a>
+          </li>
+        </div>
+        <div class="show-6">
+          <li class="list-group-item black-text">
+            <div class="show-info">
+              <div class="date-6 date">Oct21 </div>
+              <div> @ The Underdog</div>
+            </div><a target="_blank" href="#"><button class="btn btn-primary padding-button"
+                disabled>Tickets</button></a>
+          </li>
+        </div>
       </ul>
     </div>
   </div>
