--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
   <div id="about" class="container text-center">
     <div class="row">
       <div class="col-sm-6">
-        <img width="100%" height="100%" src="./assets/updated-images/Overlow.PNG">
+        <img width="100%" height="100%" src="./assets/updated-images/GBU.PNG">
       </div>
       <div class="col-sm-6 download-section">
-        <h1 class="margin-small">OVERFLOW</h1>
+        <h1 class="margin-small">GOOD, BAD & UGLY</h1>
         <h3 class="margin-small">
           NEW SINGLE OUT NOW
         </h3>
@@ -103,7 +103,8 @@
 
           </div>
           <div class="col-6">
-            <a class="margin-small" href="https://open.spotify.com/track/55WCXfPee6WawXDGvT0ZHK?si=b46eab78453f44fd">
+            <a class="margin-small"
+              href="https://open.spotify.com/album/67cqycWwSUsX5nFMBjkIlx?si=Mj0CzG6RT9aNzIKNFfiEAA">
               <button class="btn btn-stream padding-button">
                 <h5>DOWNLOAD/STREAM</h5>
               </button>
@@ -121,6 +122,17 @@
   <div id="listen" class="container text-center listen-section">
     <div class="row">
       <div class="col-sm-4 download-section">
+        <h2 class="margin-small">TRAVELING BAND</h2>
+        <a class="margin-small"
+          href="https://open.spotify.com/album/4Denxw2LfJDQAGr2r7hhQP?si=z_NogbH3SOSRUxQL7Oz1IA"><img class="hvr-grow"
+            src="./assets/updated-images/TravelingBand.JPG" width="100%"></a>
+        <a class="margin-small" href="https://open.spotify.com/album/4Denxw2LfJDQAGr2r7hhQP?si=z_NogbH3SOSRUxQL7Oz1IA">
+          <button class="btn btn-stream padding-button margin-small">
+            <h5>DOWNLOAD/STREAM</h5>
+          </button>
+        </a>
+      </div>
+      <div class="col-sm-4 download-section">
         <h2 class="margin-small">I'D BE GONE</h2>
         <a class="margin-small" href="https://open.spotify.com/track/0zvuZqCHxtTf5o4Uf9FoFZ?si=510fdb2213514efe"><img
             class="hvr-grow" src="./assets/updated-images/IdBeGone.JPEG" width="100%"></a>
@@ -135,16 +147,6 @@
         <a class="margin-small" href="https://open.spotify.com/track/18U2L6TiO64CS2uN0bglsl?si=07f48540cf934c44"><img
             class="hvr-grow" src="./assets/updated-images/tremble.jpg" width="100%"></a>
         <a class="margin-small" href="https://open.spotify.com/track/18U2L6TiO64CS2uN0bglsl?si=07f48540cf934c44">
-          <button class="btn btn-stream padding-button margin-small">
-            <h5>DOWNLOAD/STREAM</h5>
-          </button>
-        </a>
-      </div>
-      <div class="col-sm-4 download-section">
-        <h2 class="margin-small">TROUBLED MIND</h2>
-        <a class="margin-small" href="https://open.spotify.com/track/2uL9SUZMIgCY3Ll9N0Oltn?si=bbc78021700148de"><img
-            class="hvr-grow" src="./assets/updated-images/troubledmind.jpg" width="100%"></a>
-        <a class="margin-small" href="https://open.spotify.com/track/2uL9SUZMIgCY3Ll9N0Oltn?si=bbc78021700148de">
           <button class="btn btn-stream padding-button margin-small">
             <h5>DOWNLOAD/STREAM</h5>
           </button>
@@ -226,9 +228,24 @@
           <div class="show-info">
             <div class="date-4 date">May6 </div>
             <div> @ Sevier Park Fest</div>
-          </div><a target="_blank"
-            href="https://www.eventbrite.com/e/sevier-park-fest-2023-tickets-539388394207?aff=MaddieinGoodCompany"><button
-              class="btn btn-primary padding-button">Tickets</button></a>
+          </div><a target="_blank" href="#"><button class="btn btn-primary padding-button">Tickets</button></a>
+        </li>
+      </div>
+      <div class="show-5">
+        <li class="list-group-item black-text">
+          <div class="show-info">
+            <div class="date-5 date">Sep30 </div>
+            <div> @ The Underdog</div>
+          </div><a target="_blank" href="#"><button class="btn btn-primary padding-button "
+              disabled>Tickets</button></a>
+        </li>
+      </div>
+      <div class="show-6">
+        <li class="list-group-item black-text">
+          <div class="show-info">
+            <div class="date-6 date">Oct21 </div>
+            <div> @ The Underdog</div>
+          </div><a target="_blank" href="#"><button class="btn btn-primary padding-button" disabled>Tickets</button></a>
         </li>
       </div>
     </ul>
